syntax = "proto3";

package api.v1;

import "errors/errors.proto";
option go_package = "github.com/databonfire/bonfire/api/v1;v1";

enum ErrorReason {
  INVALID_PARAM = 0 [(errors.code) = 400];
  NEED_LOGIN = 1 [(errors.code) = 401];
  PAYMENT_REQUIRED = 2 [(errors.code) = 402];
  FORBIDDEN_REQUEST = 3 [(errors.code) = 403];
  INTERNAL = 4 [(errors.code) = 500];
  EXTERNAL = 5 [(errors.code) = 500];
}
